--- a/handouts/template.tex
+++ b/handouts/template.tex
@@ -252,7 +252,7 @@ $highlighting-macros$
 $endif$
 \usepackage{multirow,multicol}
 \usepackage{tabularx}
-
+\usepackage{enumitem}
 $if(tables)$
 \usepackage{longtable,booktabs}
 $if(beamer)$
