changed a tiny bit

--- a/slides/chapter-4-causation.Rmd
+++ b/slides/chapter-4-causation.Rmd
@@ -48,13 +48,20 @@ class:inverse,middle,center
 
 ## Introduction: Association vs. Causation
 
-- Association (correlation): Two variables are associated, or related, if the value of one variable gives you information about the value of the other variable.
+- Association (correlation): Two variables are associated, or related, if the value of one variable gives you information about the value of the other variable
 
-  - When comparing groups, this means that the proportions or means take on different values in the different groups.
+  - When comparing groups, this means that the proportions or means take on different values in the different groups
   
-  - Or as one variable decreases, the other variable may decrease too. We'll see other examples in chapter 10. 
+  - Or as one variable decreases, the other variable may decrease too. We'll see other examples in chapter 10 
 
-<!-- Show some pictures of what this looks like graphically -->
+<!--
+.pull-left[
+<img src="chapter-4-causation_files/boxplot.png" alt="Four box plots of chick weight vs. diet" width="100%"/>
+]
+.pull-right[
+<img src="chapter-4-causation_files/negCorrelation.png" alt="Scatterplot of miles per gallon vs. weight of the car" width="100%"/>
+]
+-->
 
 ```{r association-pics, fig.width = 2.5, fig.height = 2.625, out.width = "32%", fig.show = "hold", out.extra='style="display:inline-block;"'}
 tibble(group = rep(c("A", "B"), each = 2),
@@ -72,14 +79,14 @@ tibble(x = seq(-5, 5, length.out = 100) + rnorm(100, 0, .2),
 ---
 
 ## We Record Two Variables Now  
-- Explanatory Variable(s): variable(s) that may explain the change in the variable of interest.
-  - Called the independent variable. 
+- Explanatory Variable(s): variable(s) that may explain the change in the variable of interest
+  - Called the independent variable
 
-- Response Variable(s): variable(s) of interest we measure  on observational units.
+- Response Variable(s): variable(s) of interest we measure  on observational units
 
-  - Called the dependent variable. 
+  - Called the dependent variable
 
-  - Chapter 1 and 2, we did hypothesis tests about the response variable. In chapter 3, we estimated the response variable. 
+  - Chapter 1 and 2, we did hypothesis tests about the response variable. In chapter 3, we estimated the response variable
    
 - We hope that changes in the explanatory variable will affect the response variable => **cause-and-effect** relationship
 
@@ -89,9 +96,9 @@ tibble(x = seq(-5, 5, length.out = 100) + rnorm(100, 0, .2),
 
 ## Association vs. Causation
 
-- Often in scientific studies, we see associations.
+- Often in scientific studies, we see associations
 
-- Association, alone, is not enough to prove cause-and-effect relationships exist. 
+- Association, alone, is not enough to prove cause-and-effect relationships exist
 
 .center[
 <img src="chapter-4-causation_files/margerine.png" alt="Spurrious correlation between margerine consumption and divorce rates" width="100%"/>
@@ -101,7 +108,7 @@ tibble(x = seq(-5, 5, length.out = 100) + rnorm(100, 0, .2),
 
 ## Try to Explain This Association
 
-- For example, try to explain to your group how this association could be a cause-and-effect relationship. 
+- For example, try to explain to your group how this association could be a cause-and-effect relationship 
 
 .center[
 <img src="chapter-4-causation_files/iceCreamShark.png" alt="Spurrious correlation between ice cream sales and shark attacks" width="70%"/>
@@ -117,9 +124,9 @@ tibble(x = seq(-5, 5, length.out = 100) + rnorm(100, 0, .2),
 
 ## Why Can't Associations Determine Cause-And-Effect?
 
-- Confounding Variable(s) affect both the explanatory and response variables enough to make cause-and-effect impossible to determine.
+- Confounding Variable(s) affect both the explanatory and response variables enough to make cause-and-effect impossible to determine
 
-  - These are other variables that you may not know about, or aren't measured in your study. 
+  - These are other variables that you may not know about, or aren't measured in your study 
   - What are possible confounding variables in the association between ice cream sales and shark attacks? 
 .center[
 <img src="chapter-4-causation_files/confounding.png" alt="confounding variable affects both explanatory and response" width="80%"/>
@@ -129,7 +136,7 @@ tibble(x = seq(-5, 5, length.out = 100) + rnorm(100, 0, .2),
 
 ## Another Example
 
-- Phil Sokolof, an Omaha native, caused McDonalds to change their french fries. http://revisionisthistory.com/episodes/19-mcdonalds-broke-my-heart
+- Phil Sokolof, an Omaha native, caused McDonalds to change their french fries http://revisionisthistory.com/episodes/19-mcdonalds-broke-my-heart
 
 
 .pull-left[
@@ -174,7 +181,7 @@ class:inverse,middle,center
 
 ## Experiment
 
-- Researchers can assign the values of the explanatory variable to observational units. 
+- Researchers can assign the values of the explanatory variable to observational units
 
   - In experiments, we can say observational units are called experimental units
   
@@ -205,7 +212,7 @@ We use two strategies in STAT 218
 ---
 ## Random Sampling and Random Assignment
 
-- You can use neither, one of them, or both to do your experiment. 
+- You can use neither, one of them, or both to do your experiment
 
 .center[
 <img src="chapter-4-causation_files/samplingAssignment.png" alt="Random Sampling vs. Random Assignment" width="100%"/>
@@ -221,8 +228,8 @@ We use two strategies in STAT 218
 - I will randomly assign them a group
 
 - Benefits:
-  - Random sampling gets rid of sampling bias. We can **generalize our conclusions** to the whole population.
-  - Random assignment removes the effect of confounding variables. We can determine **cause-and-effect** if we have enough evidence to reject $H_0$. 
+  - Random sampling gets rid of sampling bias. We can **generalize our conclusions** to the whole population
+  - Random assignment removes the effect of confounding variables. We can determine **cause-and-effect** if we have enough evidence to reject $H_0$
   
 ---
 
@@ -260,6 +267,8 @@ Suppose you want to measure the average daily weight gain of steers. You assigne
 ## Exploration 4.2
 
 - Do questions 1 through 11 with your group
+
+- We will periodically review answers as a class
 
 <!-- Let's give them a bit of periodic guidance by going over e.g. questions 1-4 after a bit of work, then 5-9, then 10-12 -->
 
