--- a/handouts/Chapter_3_Confidence-Interval-Worksheet.Rmd
+++ b/handouts/Chapter_3_Confidence-Interval-Worksheet.Rmd
@@ -32,7 +32,7 @@ As each plant produces multiple shoots, you end up with a sample of 85 measureme
 
 # Cardiopulmonary Resuscitation (CPR)
 
-On TV, CPR is seemingly more commom and more successful than it is in real life, where about 45% of people who receive CPR are revived temporarily, and only 10% survive to discharge from the hospital. A group of doctors collected data on CPR survival rates in medical dramas, examining 88 episodes which aired between July 2008 and April 2009. They documented 70 CPR attempts, of which 32 succeeded.
+On TV, CPR is seemingly more common and more successful than it is in real life, where about 45% of people who receive CPR are at least temporarily resuscitated, and only 10% survive to discharge from the hospital. A group of doctors collected data on CPR survival rates in medical dramas, examining 88 episodes which aired between July 2008 and April 2009. They documented 70 CPR attempts, of which 32 succeeded. Attempts to determine the percent successfully discharged from the hospital failed, as this is not a part of the plotline in most TV dramas.
 
 \begin{enumerate}[itemsep=4em]
 \item What is the research question?
@@ -47,13 +47,13 @@ On TV, CPR is seemingly more commom and more successful than it is in real life,
 \item What is your confidence level? What level of $\alpha$ corresponds to this confidence level?
 \item Interpret your confidence interval\\\vspace{4em}
 \end{enumerate}
-
+\clearpage
 # The Great Emu War
-[The Great Emu War](http://www.todayifoundout.com/index.php/2014/01/great-emu-war-1932/) occurred in 1932 in western Australia. In the wake of WWI, veterans settled in Western Australia, on the border of the Emu's natural habitat. A drought caused many of the crops to fail, and Emus destroyed what remained, so when over 20,000 emus arrived the following year, the farmers appealed to the Minister of Defence, who deployed machine guns, and 10,000 bullets to the ``front" and expected an easy victory. 
+[The Great Emu War](http://www.todayifoundout.com/index.php/2014/01/great-emu-war-1932/) occurred between November 2 and December 10, 1932 in the Campion district of western Australia. In the wake of WWI, veterans were given land to farm in the region with the goal of increasing the economic output of the region. Previously, this land was part of an Emu seasonal migration zone between the drier interior region and the coast. In 1932, the great depression had caused wheat prices to fall precipitously, so farmers were simultaneously trying to harvest wheat and bargain with the government over the price. Complicating the situation, some 20,000 emus arrived. Rather than appeal to the Minister of Agriculture, the farmer-soldiers appealed to the Minister of Defence, who promptly deployed machine guns, several army personnel, and 10,000 bullets to the ``front". A cinematographer was also deployed to document the contingent's easy victory over the Emus.
 
-There were several battles over the course of the war, but after the first few, the Emus appeared to work out the range of the guns, and stayed just out of reach. During one of these battles, about 1000 emus gathered and the soldiers attempted an ambush; there were approximately 12 casualties as the machine gun jammed after the initial burst. 
+There were several large-scale battles over the course of the war, but after the first few, the Emus appeared to work out the range of the guns\footnote{ After a couple of days of skirmishes, the press reported that the Emus were organizing: ``Each mob has its leader, always an enormous, black plumed bird standing fully 6-feet-high, who keeps watch while his fellows busy themselves with the wheat. At the first suspicious sign, he gives the signal, and dozens of heads stretch up out of the crop... starting a headlong stampede for the scrub". (https://doi.org/10.1080/14443050609388083)}, and stayed just out of reach. During one of these battles, about 1000 emus gathered and the soldiers attempted an ambush; there were approximately 12 casualties, as the machine gun jammed after the initial burst.
 
-At the end of the Emu War, there were no human casualties (except perhaps dignity), and only 986 of the 20,000 emus had been killed. 9860 bullets were used for the operation. The Australian parliament debated whether to issue medals for this war, and one remarked that the medals should be given to the Emus, who had won every round so far. 
+At the end of the Emu War, there were no reported human casualties, and only 986 of the 20,000 emus had been killed. 9860 bullets were used for the operation\footnote{An emu who died later of other causes was found to have 5 bullets in him, suggesting that some of the bullets used actually found their targets, but that Emus are rather bullet-resistant.\vspace{.25em}}. The Australian parliament debated whether to issue medals for this war, and one MP suggested that medals should be given to the Emus, who had won every round. 
 
 \begin{enumerate}
 \item Suppose you want to establish the Emu casualty rate and compare it to the casualty rate of other Australian army operations. You decide to use the casualty rate from the entire war as your sample.
@@ -62,15 +62,26 @@ At the end of the Emu War, there were no human casualties (except perhaps dignit
   \item What is the population? (Hint: What are you hoping to compare your sample statistic to?)
   \item What type of variable is this - Categorical or Quantitative?
   \item What is the statistic of interest (proportion, mean, other quantity)?
-  \item What is your sample statistic?
+  \item What is your sample statistic?\clearpage
   \item What is your standard error? Show your work, including the formula you used to get your answer.
   \item Calculate the 2SD theory-based confidence interval for your data
   \item What is your confidence level?
   \item Interpret your confidence interval in the context of the problem. 
-  \item What would you expect to change if you had used the statistics from one of the first battles, where there were 12 casualties of around 1000 estimated birids?
+  \item What would you expect to change if you had used the statistics from one of the first battles, where there were 12 casualties of around 1000 estimated birds?
   \item As the Emus could not return fire effectively, we might estimate the casualty rate for Australian soldiers by using the rate from the most recent world war. In World War I, approximately 349,000 Australian men enlisted, with 61,966 casualties. How does the casualty rate for the Emus during the ``Great War" compare to the casualty rate for the Australian soldiers during WWI?\\\vspace{4em}
   \end{enumerate}
 
-\item something about bullets - 5 bullets to one emu killed?
+\item The Emus were reported to understand the range of the machine guns. While learning in most animals takes place from repeated exposure, we might imagine instead that the Emus undertook a statistical experiment and have the ability to precisely measure the range of the machine guns\footnote{Emus are said to be related to very intelligent dinosaurs such as Velociraptors. Jurassic Park demonstrated the intelligence of the species; we should not underestimate their descendants.\vspace{.5em}}. Over 53 bursts of machine gun fire, the mean range of the machine gun was measured to be 1553 yd (SD = 204.74). 
+  \begin{enumerate}[itemsep=4em]
+  \item What is the observational unit?
+  \item What is the population? (Hint: What are you hoping to compare your sample statistic to?)\clearpage
+  \item What type of variable is this - Categorical or Quantitative?
+  \item What is the statistic of interest (proportion, mean, other quantity)?
+  \item What is your sample statistic? (Use correct mathematical notation)
+  \item What is your standard error? Show your work, including the formula you used to get your answer.
+  \item The Emus would like to have 95% confidence in the actual range of the machine guns used by the Australian military, so that the flock leaders can keep a safe distance (while maximizing the amount of wheat they can eat). Provide an interval containing the true range of the machine gun.
+  \item Interpret your confidence interval in the context of the problem. 
+  \item Over the next several days, the Emus continue collecting data. Cumulatively, they have 92 measurements from bursts of machine gun fire, and the new mean range of the machine gun is 1550 yd (SD = 200). How do you expect your interval to change, now that you have more data? (The values are similar enough that you should not have to re-do the calculation.)
+  \end{enumerate}
 
 \end{enumerate}
