--- a/handouts/03_Confidence-Intervals.Rmd
+++ b/handouts/03_Confidence-Intervals.Rmd
@@ -24,7 +24,9 @@ As each plant produces multiple shoots, you end up with a sample of 85 measureme
 \item What are the appropriate symbols for the sample statistic, sample standard deviation, and population statistic for the variable type you chose above?
 \item If you were conducting a hypothesis test, what would $H_0$ and $H_A$ be using appropriate mathematical notation?
 \item What is the standard error? Show your work, including the formula you used to get your answer.
-\item What formula should you use for the confidence interval? \clearpage
+\item What are the validity conditions for theory-based inference on this type of data? 
+\item Are the validity conditions met? Why or why not?\clearpage
+\item What formula should you use for the confidence interval?  Provide the value of any constants you will use (e.g. multipliers).
 \item Calculate the 2SD theory-based confidence interval for this data
 \item What is your confidence level? What level of $\alpha$ corresponds to this confidence level?
 \item Interpret your confidence interval\\\vspace{4em}
@@ -38,12 +40,14 @@ On TV, CPR is seemingly more common and more successful than it is in real life,
 \item What is the research question?
 \item What is the observational unit?
 \item What type of variable is this? Categorical or Quantitative?
-\item What are the appropriate symbols for the sample statistic, sample standard deviation, and population statistic for the variable type you chose above?
+\item What are the appropriate symbols for the sample statistic, sample standard deviation, and population statistic for the variable type you chose above?\clearpage
 \item If you were conducting a hypothesis test, what would $H_0$ and $H_A$ be using appropriate mathematical notation?
-\item What is your sample statistic?\clearpage
+\item What is your sample statistic?
 \item What is the standard error? Show your work, including the formula you used to get your answer.
-\item What formula should you use for the confidence interval? 
-\item Calculate the 2SD theory-based confidence interval for this data
+\item What are the validity conditions for theory-based inference on this type of data? 
+\item Are the validity conditions met? Why or why not?
+\item What formula should you use for the confidence interval? Provide the value of any constants you will use (e.g. multipliers).
+\item Calculate an approximately 95\% theory-based confidence interval for this data
 \item What is your confidence level? What level of $\alpha$ corresponds to this confidence level?
 \item Interpret your confidence interval\\\vspace{4em}
 \end{enumerate}
@@ -68,10 +72,10 @@ At the end of the Emu War, there were no reported human casualties, and only 986
   \item What is your confidence level?
   \item Interpret your confidence interval in the context of the problem. 
   \item What would you expect to change if you had used the statistics from one of the first battles, where there were 12 casualties of around 1000 estimated birds?
-  \item As the Emus could not return fire effectively, we might estimate the casualty rate for Australian soldiers by using the rate from the most recent world war. In World War I, approximately 349,000 Australian men enlisted, with 61,966 casualties. How does the casualty rate for the Emus during the ``Great War" compare to the casualty rate for the Australian soldiers during WWI?\\\vspace{4em}
+  \item We might estimate a comparable casualty rate for Australian soldiers by using the rate from the most recent world war. In World War I, approximately 349,000 Australian men enlisted, with 61,966 casualties. How does the casualty rate for the Emus during the ``Great War" compare to the casualty rate for the Australian soldiers during WWI? (Hint: Does the casualty rate for the army fall within the confidence interval? If it does not, what does that mean?)\\\vspace{4em}
   \end{enumerate}
 
-\item The Emus were reported to understand the range of the machine guns. While learning in most animals takes place from repeated exposure, we might imagine instead that the Emus undertook a statistical experiment and have the ability to precisely measure the range of the machine guns\footnote{Emus are said to be related to very intelligent dinosaurs such as Velociraptors. Jurassic Park demonstrated the intelligence of the species; we should not underestimate their descendants.\vspace{.5em}}. Over 53 bursts of machine gun fire, the mean range of the machine gun was measured to be 1553 yd (SD = 204.74). 
+\item The Emus were reported to understand the range of the machine guns. While learning in most animals takes place from repeated exposure, we might imagine instead that the Emus designed an observational study and have the ability to precisely measure the range of the machine guns\footnote{Emus are said to be related to very intelligent dinosaurs such as Velociraptors. Jurassic Park demonstrated the intelligence of the species; we should not underestimate their descendants.\vspace{.5em}}. Over 53 bursts of machine gun fire, the mean range of the machine gun was measured to be 1553 yd (SD = 204.74). 
   \begin{enumerate}[itemsep=4em]
   \item What is the observational unit?
   \item What is the population? (Hint: What are you hoping to compare your sample statistic to?)\clearpage
@@ -79,7 +83,7 @@ At the end of the Emu War, there were no reported human casualties, and only 986
   \item What is the statistic of interest (proportion, mean, other quantity)?
   \item What is your sample statistic? (Use correct mathematical notation)
   \item What is your standard error? Show your work, including the formula you used to get your answer.
-  \item The Emus would like to have 95% confidence in the actual range of the machine guns used by the Australian military, so that the flock leaders can keep a safe distance (while maximizing the amount of wheat they can eat). Provide an interval containing the true range of the machine gun.
+  \item The Emus would like to have 95\% confidence in the actual range of the machine guns used by the Australian military, so that the flock leaders can keep a safe distance (while maximizing the amount of wheat they can eat). Provide an interval containing the true range of the machine gun.
   \item Interpret your confidence interval in the context of the problem. 
   \item Over the next several days, the Emus continue collecting data. Cumulatively, they have 92 measurements from bursts of machine gun fire, and the new mean range of the machine gun is 1550 yd (SD = 200). How do you expect your interval to change, now that you have more data? (The values are similar enough that you should not have to re-do the calculation.)
   \end{enumerate}
