updates to CI worksheet

--- a/handouts/03_Confidence-Intervals.Rmd
+++ b/handouts/03_Confidence-Intervals.Rmd
@@ -13,7 +13,7 @@ geometry: margin=1in,headsep=.2in
 # Asparagus grows up to 10" in a 24 hour period
 
 [Someone on the internet is claiming that asparagus shoots grow 10" in a 24 hour period](
-https://www.reddit.com/r/AskReddit/comments/9v1ynv/whats_your_favorite_fun_fact/). In order to test this theory, you plant a random sample of 20 seeds from a set of 5 different seed packets. After the seeds have sprouted and become well established, you measure each new shoot from the plant, measuring its length (in inches) at 8AM on the day it appeared and then again at 8AM the next day, subtracting to document the amount of growth. 
+https://www.reddit.com/r/AskReddit/comments/9v1ynv/whats_your_favorite_fun_fact/). In order to test this theory, you go to your asparagus patch and measure each new shoot from each plant. You measure its length (in inches) at 8AM on the day it appeared and then again at 8AM the next day, subtracting to document the amount of growth. 
 
 As each plant produces multiple shoots, you end up with a sample of 85 measurements. The sample mean is 9.53 inches, with a sample standard deviation of 2.4 inches.
 
@@ -27,27 +27,27 @@ As each plant produces multiple shoots, you end up with a sample of 85 measureme
 \item What are the validity conditions for theory-based inference on this type of data? 
 \item Are the validity conditions met? Why or why not?\clearpage
 \item What formula should you use for the confidence interval?  Provide the value of any constants you will use (e.g. multipliers).
-\item Calculate the 2SD theory-based confidence interval for this data
+\item Calculate the 2SD theory-based confidence interval for this data\\\vspace{2em}
 \item What is your confidence level? What level of $\alpha$ corresponds to this confidence level?
 \item Interpret your confidence interval\\\vspace{4em}
 \end{enumerate}
 
 # Cardiopulmonary Resuscitation (CPR)
 
-On TV, CPR is seemingly more common and more successful than it is in real life, where about 45% of people who receive CPR are at least temporarily resuscitated, and only 10% survive to discharge from the hospital. A group of doctors collected data on CPR survival rates in medical dramas, examining 88 episodes which aired between July 2008 and April 2009. They documented 70 CPR attempts, of which 32 succeeded. Attempts to determine the percent successfully discharged from the hospital failed, as this is not a part of the plotline in most TV dramas.
+On TV, CPR is seemingly more successful than it is in real life, where about 45% of people who receive CPR are at least temporarily resuscitated, and only 10% survive to discharge from the hospital. A group of doctors collected data on CPR survival rates in medical dramas, examining 88 episodes which aired between July 2008 and April 2009. They documented 70 CPR attempts; 32 succeeded in temporarily resuscitating the patient. Attempts to determine the percent successfully discharged from the hospital failed, as this is not a part of the plotline in most TV dramas.
 
 \begin{enumerate}[itemsep=4em]
 \item What is the research question?
 \item What is the observational unit?
 \item What type of variable is this? Categorical or Quantitative?
-\item What are the appropriate symbols for the sample statistic, sample standard deviation, and population statistic for the variable type you chose above?\clearpage
+\item What are the appropriate symbols for the sample statistic and population statistic for the variable type you chose above?\clearpage
 \item If you were conducting a hypothesis test, what would $H_0$ and $H_A$ be using appropriate mathematical notation?
 \item What is your sample statistic?
 \item What is the standard error? Show your work, including the formula you used to get your answer.
 \item What are the validity conditions for theory-based inference on this type of data? 
 \item Are the validity conditions met? Why or why not?
 \item What formula should you use for the confidence interval? Provide the value of any constants you will use (e.g. multipliers).
-\item Calculate an approximately 95\% theory-based confidence interval for this data
+\item Calculate an approximately 95\% theory-based confidence interval for this data\\\vspace{2em}
 \item What is your confidence level? What level of $\alpha$ corresponds to this confidence level?
 \item Interpret your confidence interval\\\vspace{4em}
 \end{enumerate}
@@ -63,7 +63,6 @@ At the end of the Emu War, there were no reported human casualties, and only 986
 \item Suppose you want to establish the Emu casualty rate and compare it to the casualty rate of other Australian army operations. You decide to use the casualty rate from the entire war as your sample.
   \begin{enumerate}[itemsep=4em]
   \item What is the observational unit?
-  \item What is the population? (Hint: What are you hoping to compare your sample statistic to?)
   \item What type of variable is this - Categorical or Quantitative?
   \item What is the statistic of interest (proportion, mean, other quantity)?
   \item What is your sample statistic?\clearpage
@@ -71,7 +70,7 @@ At the end of the Emu War, there were no reported human casualties, and only 986
   \item Calculate the 2SD theory-based confidence interval for your data
   \item What is your confidence level?
   \item Interpret your confidence interval in the context of the problem. 
-  \item What would you expect to change if you had used the statistics from one of the first battles, where there were 12 casualties of around 1000 estimated birds?
+  \item What parts of the confidence interval equation would you expect to change if you had used the statistics from one of the first battles, where there were 12 casualties of around 1000 estimated birds?
   \item We might estimate a comparable casualty rate for Australian soldiers by using the rate from the most recent world war. In World War I, approximately 349,000 Australian men enlisted, with 61,966 casualties. How does the casualty rate for the Emus during the ``Great War" compare to the casualty rate for the Australian soldiers during WWI? (Hint: Does the casualty rate for the army fall within the confidence interval? If it does not, what does that mean?)\\\vspace{4em}
   \end{enumerate}
 
@@ -83,7 +82,7 @@ At the end of the Emu War, there were no reported human casualties, and only 986
   \item What is the statistic of interest (proportion, mean, other quantity)?
   \item What is your sample statistic? (Use correct mathematical notation)
   \item What is your standard error? Show your work, including the formula you used to get your answer.
-  \item The Emus would like to have 95\% confidence in the actual range of the machine guns used by the Australian military, so that the flock leaders can keep a safe distance (while maximizing the amount of wheat they can eat). Provide an interval containing the true range of the machine gun.
+  \item The Emus would like to have 95\% confidence in the actual range of the machine guns used by the Australian military, so that the flock leaders can keep a safe distance (while maximizing the amount of wheat they can eat). Provide an interval containing the true range of the machine gun.\\\vspace{2em}
   \item Interpret your confidence interval in the context of the problem. 
   \item Over the next several days, the Emus continue collecting data. Cumulatively, they have 92 measurements from bursts of machine gun fire, and the new mean range of the machine gun is 1550 yd (SD = 200). How do you expect your interval to change, now that you have more data? (The values are similar enough that you should not have to re-do the calculation.)
   \end{enumerate}
